# pegasus-ia-bootstrap

./: .gitignore  PEGASUS_MEMORY_MCP_READY_FOR_BOOTSTRAP.md  PRD-bootstrap-cli-lifecycle.md  README.md  pyproject.toml
openspec/: config.yaml
openspec/changes/adapt-bootstrap-to-vscode-copilot/: apply-progress.md  design.md  explore-global-install.md  explore.md  proposal.md  tasks.md  verify-slice-1.md  verify-slice-2.md
openspec/changes/adapt-bootstrap-to-vscode-copilot/specs/pegasus-harness-bootstrap/: spec.md
openspec/changes/archive/2026-06-24-create-cursor-harness-bootstrap/: design.md  tasks.md
openspec/changes/archive/2026-06-24-create-cursor-harness-bootstrap/specs/pegasus-harness-bootstrap/: spec.md
openspec/changes/archive/2026-06-27-adapt-bootstrap-to-vscode-copilot/: apply-progress.md  verify-slice-3.md  verify-slice-4.md  verify.md
openspec/changes/archive/2026-07-06-bootstrap-cli-lifecycle/: apply-progress.md  archive-report.md  design.md  proposal.md  verify.md
openspec/changes/archive/2026-07-06-integrate-pegasus-memory-mcp/: design.md  pegasus-memory-mcp-follow-up.md  proposal.md  tasks.md  verify-report.md  verify-slice-1.md  verify-slice-3.md
openspec/changes/archive/2026-07-09-mcp-stdio-health-check/: archive-report.md  tasks.md  verify-slice-2.md  verify.md
openspec/changes/archive/2026-07-10-workspace-sync-command/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/bootstrap-cli-lifecycle/: apply-progress.md  tasks.md  verify-slice-1.md  verify-slice-2.md  verify-slice-3.md  verify-slice-4.md  verify.md
openspec/changes/bootstrap-cli-lifecycle/specs/pegasus-harness-bootstrap/: spec.md
openspec/changes/create-cursor-harness-bootstrap/: design.md  proposal.md  tasks.md  verify.md
openspec/changes/create-cursor-harness-bootstrap/specs/pegasus-harness-bootstrap/: spec.md
openspec/changes/durable-agent-communication/: apply-progress.md  design.md  exploration.md  proposal.md  tasks.md  verify-corrective-doc-designer.md
openspec/changes/durable-agent-communication/specs/pegasus-harness-bootstrap/: spec.md
openspec/changes/integrate-pegasus-memory-mcp/: apply-progress.md  prd.md  tasks.md  verify-slice-2.md  verify-slice-4.md
openspec/changes/integrate-pegasus-memory-mcp/specs/pegasus-harness-bootstrap/: spec.md
openspec/changes/mcp-stdio-health-check/: apply-progress.md  design.md  explore.md  proposal.md  tasks.md  verify-slice-1.md
openspec/specs/pegasus-harness-bootstrap/: spec.md
pegasus_harness_bootstrap/: __init__.py  cli.py  manifest.py
templates/copilot-global/agents/: pegasus-global-orchestrator.agent.md
templates/copilot-global/instructions/: pegasus-global.instructions.md
templates/copilot-global/prompts/: pegasus-start.prompt.md
templates/cursor-global/: pegasus-global.mdc
templates/harness/: AGENTS.md
templates/harness/.cursor/rules/: pegasus-memory.mdc  pegasus-workflow.mdc
templates/harness/.github/: copilot-instructions.md
templates/harness/.github/agents/: doc-designer.agent.md  memory-maintainer.agent.md  pegasus-orchestrator.agent.md  sdd-apply.agent.md  sdd-design.agent.md  sdd-proposal.agent.md  sdd-spec.agent.md  sdd-tasks.agent.md  sdd-verify.agent.md  session-handoff.agent.md
templates/harness/.github/instructions/: pegasus-legacy-compatibility.instructions.md  pegasus-local-first.instructions.md  pegasus-memory.instructions.md  pegasus-sdd-boundaries.instructions.md  pegasus-workflow.instructions.md
templates/harness/.github/prompts/: handoff.prompt.md  memory-update.prompt.md  sdd-phases.prompt.md
templates/harness/.github/references/orchestration/: routing.md
templates/harness/.github/references/phases/: apply.md  design.md  memory-maintenance.md  prd.md  proposal.md  session-handoff.md  spec.md  tasks.md  verify.md
templates/harness/.github/references/results/: apply-result-v1.md  design-result-v1.md  handoff-result-v1.md  memory-maintenance-result-v1.md  orchestrator-result-v1.md  prd-result-v1.md  proposal-result-v1.md  spec-result-v1.md  tasks-result-v2.md  tasks-transport-v2.md  verify-result-v1.md
templates/harness/.github/references/shared/: authority.md  delegation-ownership.md  durable-state.md  persistence.md  phase-common.md  result-envelope.md  semantic-response.md  skill-resolution.md  status-readiness.md
templates/harness/docs/pegasus/: apply-progress.md  design.md  prd.md  proposal.md  spec.md  tasks.md  verify.md
templates/harness/docs/pegasus/memory/: context.md  decisions.md  handoff.md  learnings.md  tasks-log.md
tests/: audit_instruction_architecture.py  doc_designer_contract.py  durable_agent_communication_contract.py  prd_runtime_contract.py  smoke.sh
(+3 files in other folders)
